# fastsoft

./: .gitignore  pyproject.toml
backend/: components copy.py  components.py  dynamic_crud.py  form_builder.py  main.py
backend/static/: README.md  component_render copy.js  component_render.js  example_usage.js
backend/templates/: dynamic_form.html  header.html  index.html
