[tool.poetry]
name = "fastsoft"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.12"}
jinja2 = "^3.1.6"
sqlmodel = "^0.0.24"


[tool.poetry.group.dev.dependencies]
taskipy = "^1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
run = "fastapi dev backend/main.py"
commit = "git add . && git commit -m '.' && git push"
